fixed the header-right alignment

--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,19 @@
 }
 
 .timeAndDate {
-  margin-bottom: 10px;
-  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.date {
+  margin: 0px;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.time {
+  margin: 0px;
   font-size: 25px;
 }
 
@@ -91,7 +102,7 @@
 }
 
 .forecast-image {
-  width: 100px;
+  width: 120px;
   height: auto;
 }
 
@@ -99,13 +110,13 @@
   margin-top: 20px;
   margin-bottom: 0px;
   font-size: 15px;
-  font-weight: bold;
+  /* font-weight: bold; */
   /* color: white; */
 }
 
 .forecast-temperature {
-  font-size: 50px;
-  font-weight: 900;
+  font-size: 55px;
+  font-weight: bold;
   margin: 0px;
   height: 60px;
   /* color: white; */
@@ -114,6 +125,8 @@
 .forecast-condition {
   font-size: 20px;
   font-weight: 800;
+  margin-bottom: 10px;
+  margin-top: 10px;
   /* color: white; */
 }
 
@@ -419,12 +432,12 @@ p {
   margin-top: 20px;
   margin-bottom: 0px;
   font-size: 15px;
-  font-weight: bold;
+  /* font-weight: bold; */
   color: white;
 }
 
 .forecast-temperature-dark {
-  font-size: 50px;
+  font-size: 55px;
   font-weight: 900;
   margin: 0px;
   height: 60px;
@@ -434,6 +447,8 @@ p {
 .forecast-condition-dark {
   font-size: 20px;
   font-weight: 800;
+  margin-bottom: 10px;
+  margin-top: 10px;
   color: white;
 }
 
